<resources>
    <string name="app_name">BioTech</string>
    <string name="inputR_fullName">Full_name</string>
    <string name="inputR_email">Email</string>
    <string name="inputR_password">Password</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="btn_logIn">Login</string>
    <string name="txt_view_createAcc">Create an Account</string>
    <string name="txt_view_login">Login</string>
    <string name="check_box_tec">I am a Teacher</string>
    <string name="link_create">New to BioTech? Create Account</string>
    <string name="splash_name">BioTech</string>

    <!--profile part-->
    <string name="topic_name">BioTech</string>
    <string name="menu_Quiz">Quiz</string>
    <string name="menu_Forum">Forum</string>
    <string name="menu_Assignment">Assignment</string>
    <string name="menu_Profile">Profile</string>
    <string name="title">My Profile</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_forum">Forum</string>
    <string name="title_assignment">Assignment</string>
    <string name="title_profile">Profile</string>
    <string name="textView_01">Name :</string>
    <string name="textView_02">Email :</string>
    <string name="textView_04">Name of the user</string>
    <string name="textView_05">Email of the user</string>
    <string name="btn_01">Edit Profile</string>
    <string name="loch1_1">TODO</string>
    <string name="loch1_2">TODO</string>
    <string name="loch1_3">TODO</string>
    <string name="loch1_4">TODO</string>
    <string name="loch1_5">TODO</string>
    <!--end of profile part-->

    <!-- ACHI - START -->

    <string name="Tmenu_Quiz">Quiz</string>
    <string name="Tmenu_Forum">Forum</string>
    <string name="Tmenu_Assignment">Assignment</string>
    <string name="Tmenu_Profile">Profile</string>
    <!-- Quiz List Activity -->
    <!-- <string name="menu_Quiz">Quiz</string>
    <string name="menu_Forum">Forum</string>
    <string name="menu_Assignment">Assignment</string>
    <string name="menu_Profile">Profile</string>-->
    <string name="labelQuizList">Quiz List</string>
    <string name="labelCreateNewQuiz">Create New Quiz</string>

    <!--Create Quiz Activity-->
    <string name="labelTopCreateQuiz">Create New Quiz</string>
    <string name="labelQuizNumber">Quiz</string>
    <string name="labelInputQ1">Question 1</string>
    <string name="inputQ1" />
    <string name="hintInputQ1">Enter Question 1 here</string>
    <string name="descriptBtnIconAddQuiz">TODO</string>
    <string name="hintInputQ1Ans4">Enter Answer 4 here</string>
    <string name="hintInputQ1Ans3">Enter Answer 3 here</string>
    <string name="hintInputQ1Ans2">Enter Answer 2 here</string>
    <string name="hintInputQ1Ans1">Enter Answer 1 here</string>
    <string name="inputQuizNumber" />
    <string name="labelInputQ2">Question 2</string>
    <string name="hintInputQ2">Enter Question 2 here</string>
    <string name="labelInputQ3">Question 3</string>

    <string name="hintInputQ3">Enter Question 3 here</string>
    <string name="inputQ3" />
    <string name="action_settings">Settings</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="labelInputCorrectQ1">Correct Answer : </string>
    <string name="hintInputCorrectQ1">Correct Answer</string>
    <string name="labelInputCorrectQ2">Correct Answer : </string>
    <string name="hintInputCorrectQ2">Correct Answer</string>
    <string name="inputPassMark" />
    <string name="hintInputPassMark">100</string>
    <string name="labelPassMark">Pass Mark : </string>
    <string name="hintInputQuizNumber">1</string>
    <string name="labelInputCorrectQ3">Correct Answer : </string>
    <string name="hintInputCorrectQ3">Correct Answer</string>
    <string name="labelTopViewQuiz">View Quiz</string>

    <!--View Quiz Activity-->
    <string name="labelInputCorrectQ3_View">Correct Answer :</string>
    <string name="labelTopCreateQuiz_View">View Quiz</string>
    <string name="labelQuizNumber_View">Quiz</string>
    <string name="labelInputQuizNumber_View" />
    <string name="labelPassMark_View">Pass Mark : </string>
    <string name="labelInputPassMark_View" />
    <string name="labelInputQ1_View">Question 1</string>
    <string name="lbl_InputQ1_View" />

    <string name="labelInputQ1Ans1_View" />
    <string name="labelInputQ1Ans2_View" />
    <string name="labelInputQ1Ans3_View" />
    <string name="labelInputQ1Ans4_View" />
    <string name="labelInputCorrectQ1_View">Correct Answer : </string>
    <string name="labelInputQ2_View">Question 2</string>
    <string name="lbl_InputQ2_View" />
    <string name="labelInputQ2Ans1_View" />
    <string name="labelPassList">Pass List</string>
    <string name="descriptBtnIconPassList" />
    <string name="labelInputQ2Ans2_View" />
    <string name="labelInputQ2Ans3_View" />
    <string name="labelInputQ2Ans4_View" />
    <string name="labelInputCorrectQ2_View">Correct Answer : </string>
    <string name="lbl_InputCorrectQ2_View" />
    <string name="labelInputQ3_View">Question 3</string>
    <string name="lbl_InputQ3_View" />
    <string name="labelInputQ3Ans1_View" />
    <string name="labelInputQ3Ans2_View" />
    <string name="labelInputQ3Ans3_View" />
    <string name="labelInputQ3Ans4_View" />
    <string name="lbl_InputCorrectQ1_View" />
    <string name="lbl_InputCorrectQ3_View" />

    <!--Pass List Activity-->
    <string name="labelTopPassList">Pass List</string>
    <string name="labelPassPercentage_PassList">Pass Percentage : </string>
    <string name="labelInputPassPercentage_PassList" />
    <string name="logo_menu">BioTech</string>
    <string name="hintInputDeadline">Date</string>
    <string name="inputDeadline" />
    <string name="labelDeadline">Deadline :</string>
    <!-- ACHI - END -->

    <!--Beginning of Loch-->
    <!--Student input-->
    <string name="label_ID_std">Student ID :</string>
    <string name="label_week_std">Week :</string>
    <string name="label_type_std">Type :</string>
    <string name="label_date_std">Day :</string>
    <string name="label_weather_std">Weather :</string>
    <string name="label_place_std">Place :</string>
    <string name="label_des_std">Description :</string>
    <string name="topic_ass_std">Interspecific Interactions</string>
    <string name="btn_submit">Submit</string>
    <string name="input_ID">Enter Student ID</string>
    <string name="input_week">Enter the week</string>
    <string name="input_date">Enter the day</string>
    <string name="input_weather">Enter the weather</string>
    <string name="input_place">Enter the place</string>
    <string name="input_desc">Enter the description</string>

    <string-array name="types">
        <item>Mutualism</item>
        <item>Commensolism</item>
        <item>Parasitism</item>
        <item>Competition</item>
    </string-array>
    <!--Teacher-->
    <string name="weekView">Week</string>
    <string name="label_week">Week :</string>
    <string name="label_date">Day :</string>
    <string name="label_weather">Weather :</string>
    <string name="label_place">Place :</string>
    <string name="label_description">Description :</string>
    <string name="testView_date_te"></string>
    <string name="testView_weather_te"></string>
    <string name="testView_place_te"></string>
    <string name="testView_des_te"></string>
    <string name="type_txt">Type_01</string>
    <string name="tot_students">No of Students attempted : </string>
    <string name="pass_per">Attempted students percentage : </string>
    <string name="btn_mutu">Mutualism</string>
    <string name="btn_comm">Commensolism</string>
    <string name="btn_para">Parasitism</string>
    <string name="btn_compe">Competition</string>
    <string name="title_inter_inter">Interspecific Interactions</string>
    <string name="title_std_ass">Student Assignment</string>
    <string name="title_type">Type_01</string>
    <string name="title_std">student_01</string>
    <string name="input_marks">Enter Marks : </string>
    <string name="weekEnter">Enter the week</string>
    <string name="techStdMarksInputBtn">Save</string>
    <string name="labelDeadline_View">Deadline :</string>
    <string name="labelInputDeadline_View" />


    <!--End of Loch-->


    <!-- Ashu Forum-->
    <string name="Forum" />
    <string name="forum">Forum</string>
    <string name="Fname">Forum Name</string>
    <string name="description">Description</string>
    <string name="checkBox">Display description on course page</string>
    <string name="forumType">Forum Type</string>
    <string name="forumTypetxtview" />
    <string name="descriptionArea" />
    <string name="Fnametxtview" />
    <string name="btn_1">Create</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="quetion">Quetion</string>
    <string name="quetion_plantxt" />
    <string name="RAnswer">Recommend Answer</string>
    <string name="RAnswerplaintxt" />
    <string name="addAnswer">Add Answer</string>
    <string name="btn_fsubmit">Submit</string>
    <string name="typeHere">Type here</string>
    <string name="F_List">Forum List</string>
    <string name="Create_Forum">Create New Forum</string>
    <string name="View_Forums">View Forums</string>
    <string name="textView_quetionNo">Quetion No</string>
    <string name="FDash_FList">Forum List</string>
    <string name="FDash_PostAnswer">Post Answer</string>
    <string name="FDash_AddQuetion">Add Quetion</string>
    <string name="FDash_DisplayForum">View Forum</string>
    <string name="txtView_ForTeacher">For Teaches</string>
    <string name="txtDash_ForStudent">For Student</string>
    <string name="txtView_F_PostName">Forum Name</string>
    <string name="txtView_FPostName">Forum Name</string>
    <string name="txtView_PostAnswer">Post Answer</string>
    <string name="txtxView_PostQuetionNo">Quetion No</string>
    <string name="btn_PostAnswerSubmit">Share Answer</string>
    <string name="btnLogOut">Log Out</string>
    <string name="btn_forTeachet">Click  Here</string>
    <string name="btn_forStudent">Click Here</string>
    <string name="txt_As_Teacher">As a Teacher</string>
    <string name="txt_as_Student">As a Student</string>

    <!-- End of Ashu-->

    <!-- Dev STARTS -->
    <string name="quiz_attendance">Quiz_attendance</string>
    <string name="name">Quiz Name</string>
    <string name="quiz_id">Quiz ID</string>
    <string name="registered_number">Registration Number</string>
    <string name="date">Quiz Date</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="results">Results</string>
    <string name="quiz_number">Quiz number</string>
    <string name="student_name">Student name</string>
    <string name="register_number">Register number</string>
    <string name="quiz_date">Quiz date</string>
    <string name="quiz_number_res">Quiz Number_res</string>

    <!-- Dev ENDS-->

    <!-- Testing loch-->
    <string name="lecLogOutBtn">LogOut</string>
    <string name="lecDashName">BioTech Lecturer</string>
    <string name="testView_week_te"></string>
    <string name="txt_AsTeacher">As a Teacher</string>
    <string name="txt_Response">Enter Response</string>
    <string name="txt_responsForum">Forum Response</string>
    <string name="txt_StudentCount">Enter Student Count</string>
    <string name="btn_response">Forum Response Count</string>
    <string name="LecEmailProf">bioTech@gmail.com</string>
    <string name="lecPassLabelProf">Password :</string>
    <string name="lecPasswordProf">bioTechLecturer</string>

</resources>