<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0ECEA"
    tools:context=".single_student">

    <View
        android:id="@+id/viewtechAssType"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="640dp"
        android:background="#355723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/navigation_view" />

    <TextView
        android:id="@+id/TechDateLabel"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="88dp"
        android:text="@string/label_date"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StdNameView" />

    <TextView
        android:id="@+id/TechPlaceLabel"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/label_place"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TechDateLabel"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/TechDescriptionLabel"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_description"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TechPlaceLabel"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/TechDateView"
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:text="@string/testView_date_te"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TechDateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toEndOf="@+id/TechDateLabel" />

    <TextView
        android:id="@+id/TechPlaceView"
        android:layout_width="192dp"
        android:layout_height="38dp"
        android:text="@string/testView_place_te"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TechPlaceLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toEndOf="@+id/TechPlaceLabel" />

    <TextView
        android:id="@+id/TechDescriptionView"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/testView_des_te"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TechDescriptionLabel" />

    <TextView
        android:id="@+id/singleStdTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/title_type"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/StdNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/title_std"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleStdTopic" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="672dp"
        android:background="#A8355723"
        app:itemIconTint="@color/black"
        app:itemTextColor="#2D2F31"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation_menu" />

    <TextView
        android:id="@+id/TechWeatherLabel"
        android:layout_width="102dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:text="@string/label_weather"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TechPlaceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TechDateLabel"
        app:layout_constraintVertical_bias="0.469"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/TechWeatherView"
        android:layout_width="192dp"
        android:layout_height="40dp"
        android:text="@string/testView_weather_te"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TechPlaceView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/TechWeatherLabel"
        app:layout_constraintTop_toBottomOf="@+id/TechDateView"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/asstechmarksbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/techStdMarksInputBtn"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TechDescriptionView"
        app:layout_constraintVertical_bias="0.587" />

    <EditText
        android:id="@+id/techMarksEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/navigation_view"
        app:layout_constraintEnd_toStartOf="@+id/asstechmarksbtn"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TechDescriptionView"
        app:layout_constraintVertical_bias="0.572"
        android:autofillHints="" />

    <TextView
        android:id="@+id/TechWeekLabel"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/label_week"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TechDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StdNameView"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/TechWeekView"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:text="@string/testView_week_te"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TechWeekLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toEndOf="@+id/TechWeekLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
