<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0ECEA"
    tools:context=".std_ass_input">

    <TextView
        android:id="@+id/assStdTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/topic_ass_std"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewstdInput"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="640dp"
        android:background="#355723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/navigation_view"
        app:layout_constraintTop_toBottomOf="@+id/assStdTopic"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/AssTypeLabel"
        android:layout_width="75dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:text="@string/label_type_std"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assStdTopic"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/AssDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_date_std"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssTypeLabel"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/AssWeatherLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/label_weather_std"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssDateLabel"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/AssPlaceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/label_place_std"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssWeatherLabel"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/AssDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_des_std"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssPlaceLabel"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/AssDescriptionkinput"
        android:layout_width="351dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_desc"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssDescriptionLabel"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/AssPlaceinput"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginStart="88dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_place"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/AssPlaceLabel"
        app:layout_constraintStart_toEndOf="@+id/AssPlaceLabel"
        android:layout_marginLeft="88dp" />

    <EditText
        android:id="@+id/AssWeatherinput"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_marginStart="72dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_weather"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/AssWeatherLabel"
        app:layout_constraintStart_toEndOf="@+id/AssWeatherLabel"
        android:layout_marginLeft="72dp" />

    <EditText
        android:id="@+id/AssDateinput"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_date"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/AssDateLabel"
        app:layout_constraintStart_toEndOf="@+id/AssDateLabel"
        android:layout_marginLeft="96dp" />

    <Button
        android:id="@+id/stdSubmitbtn"
        android:layout_width="178dp"
        android:layout_height="52dp"
        android:layout_marginTop="35dp"
        android:text="@string/btn_submit"
        android:textSize="18sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssDescriptionkinput"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/AssWeekLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/label_week_std"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/AssTypeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assStdTopic"
        app:layout_constraintVertical_bias="0.59"
        android:layout_marginLeft="28dp" />


    <EditText
        android:id="@+id/AssWeekinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_week"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toEndOf="@+id/AssWeekLabel"
        app:layout_constraintTop_toBottomOf="@+id/assStdTopic" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="672dp"
        android:background="#A8355723"
        app:itemIconTint="@color/black"
        app:itemTextColor="#2D2F31"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation_menu" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="205dp"
        android:layout_height="37dp"
        android:dropDownWidth="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/AssDateinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toEndOf="@+id/AssTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/AssWeekinput"
        app:layout_constraintVertical_bias="0.517" />

</androidx.constraintlayout.widget.ConstraintLayout>
